--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -7,7 +7,7 @@
         <app-product-list></app-product-list>
       </ion-col>
       <ion-col size="4">
-        <!-- <app-shopping-cart></app-shopping-cart> -->
+        <app-shopping-cart></app-shopping-cart>
       </ion-col>
     </ion-row>
   </ion-grid>
